# file-encoding-app

./: CMakeLists.txt  README.md
huffman/: Huffman.cpp  Huffman.h
